bpo-40408: Fix support of nested type variables in GenericAlias.