Objects/genericaliasobject.c
@@ -182,28 +182,57 @@ tuple_index(PyObject *self, Py_ssize_t len, PyObject *item)
     return -1;
 }
 
-// tuple(t for t in args if isinstance(t, TypeVar))
+static int
+tuple_add(PyObject *self, Py_ssize_t len, PyObject *item)
+{
+    if (tuple_index(self, len, item) < 0) {
+        Py_INCREF(item);
+        PyTuple_SET_ITEM(self, len, item);
+        return 1;
+    }
+    return 0;
+}
+
 static PyObject *
 make_parameters(PyObject *args)
 {
-    Py_ssize_t len = PyTuple_GET_SIZE(args);
+    Py_ssize_t nargs = PyTuple_GET_SIZE(args);
+    Py_ssize_t len = nargs;
     PyObject *parameters = PyTuple_New(len);
     if (parameters == NULL)
         return NULL;
     Py_ssize_t iparam = 0;
-    for (Py_ssize_t iarg = 0; iarg < len; iarg++) {
+    for (Py_ssize_t iarg = 0; iarg < nargs; iarg++) {
         PyObject *t = PyTuple_GET_ITEM(args, iarg);
         int typevar = is_typevar(t);
         if (typevar < 0) {
-            Py_XDECREF(parameters);
+            Py_DECREF(parameters);
             return NULL;
         }
         if (typevar) {
-            if (tuple_index(parameters, iparam, t) < 0) {
-                Py_INCREF(t);
-                PyTuple_SET_ITEM(parameters, iparam, t);
-                iparam++;
+            iparam += tuple_add(parameters, iparam, t);
+        }
+        else {
+            _Py_IDENTIFIER(__parameters__);
+            PyObject *subparams;
+            if (_PyObject_LookupAttrId(t, &PyId___parameters__, &subparams) < 0) {
+                Py_DECREF(parameters);
+                return NULL;
             }
+            if (subparams && PyTuple_Check(subparams)) {
+                Py_ssize_t len2 = PyTuple_GET_SIZE(subparams);
+                len += len2 - 1 - (iarg - iparam);
+                if (_PyTuple_Resize(&parameters, len) < 0) {
+                    Py_DECREF(subparams);
+                    Py_DECREF(parameters);
+                    return NULL;
+                }
+                for (Py_ssize_t j = 0; j < len2; j++) {
+                    PyObject *t2 = PyTuple_GET_ITEM(subparams, j);
+                    iparam += tuple_add(parameters, iparam, t2);
+                }
+            }
+            Py_XDECREF(subparams);
         }
     }
     if (iparam < len) {
@@ -234,6 +263,7 @@ ga_getitem(PyObject *self, PyObject *item)
     }
     int is_tuple = PyTuple_Check(item);
     Py_ssize_t nitem = is_tuple ? PyTuple_GET_SIZE(item) : 1;
+    PyObject **args = is_tuple ? &PyTuple_GET_ITEM(item, 0) : &item;
     if (nitem != nparams) {
         return PyErr_Format(PyExc_TypeError,
                             "Too %s arguments for %R",
@@ -242,8 +272,9 @@ ga_getitem(PyObject *self, PyObject *item)
     }
     Py_ssize_t nargs = PyTuple_GET_SIZE(alias->args);
     PyObject *newargs = PyTuple_New(nargs);
-    if (newargs == NULL)
+    if (newargs == NULL) {
         return NULL;
+    }
     for (Py_ssize_t iarg = 0; iarg < nargs; iarg++) {
         PyObject *arg = PyTuple_GET_ITEM(alias->args, iarg);
         int typevar = is_typevar(arg);
@@ -254,15 +285,46 @@ ga_getitem(PyObject *self, PyObject *item)
         if (typevar) {
             Py_ssize_t iparam = tuple_index(alias->parameters, nparams, arg);
             assert(iparam >= 0);
-            if (is_tuple) {
-                arg = PyTuple_GET_ITEM(item, iparam);
+            arg = args[iparam];
+            Py_INCREF(arg);
+        }
+        else {
+            _Py_IDENTIFIER(__parameters__);
+            PyObject *subparams;
+            if (_PyObject_LookupAttrId(arg, &PyId___parameters__, &subparams) < 0) {
+                Py_DECREF(newargs);
+                return NULL;
+            }
+            if (subparams && PyTuple_Check(subparams)) {
+                Py_ssize_t nsubargs = PyTuple_GET_SIZE(subparams);
+                PyObject *newsubargs = PyTuple_New(nsubargs);
+                if (newsubargs == NULL) {
+                    Py_DECREF(subparams);
+                    Py_DECREF(newargs);
+                    return NULL;
+                }
+                for (Py_ssize_t j = 0; j < nsubargs; ++j) {
+                    PyObject *a = PyTuple_GET_ITEM(subparams, j);
+                    Py_ssize_t iparam = tuple_index(alias->parameters, nparams, a);
+                    if (iparam >= 0) {
+                        a = args[iparam];
+                    }
+                    Py_INCREF(a);
+                    PyTuple_SET_ITEM(newsubargs, j, a);
+                }
+                arg = PyObject_GetItem(arg, newsubargs);
+                Py_DECREF(newsubargs);
+                if (arg == NULL) {
+                    Py_DECREF(subparams);
+                    Py_DECREF(newargs);
+                    return NULL;
+                }
             }
             else {
-                assert(iparam == 0);
-                arg = item;
+                Py_INCREF(arg);
             }
+            Py_XDECREF(subparams);
         }
-        Py_INCREF(arg);
         PyTuple_SET_ITEM(newargs, iarg, arg);
     }
     PyObject *res = Py_GenericAlias(alias->origin, newargs);
